test/tests/good/function-sig-class.carth
;; 123456

(import std)

(def tr :of (forall (a b) (where (SameSize a b))
                    (Fun [a] b))
  transmute)

(def main
  (display (show-int ((: tr (Fun [Nat] Int))
                      ((: tr (Fun [Int] Nat))
                       123456)))))
