test/tests/bad/invalid-user-type-sig.carth
;; InvalidUserTypeSig

(defun invalid-user-type-signature [x] :of (forall (a b c) (Fun [a] a))
  x)
